# CppSkillBox

./: .gitignore
Module10th/Module10Tasks/: README.md  quadratic_solver  quadratic_solver.cpp
Module11th/: README.md
Module11th/Module11Tasks/: README.md
Module12th/: README.md
Module12th/Examples/: array_size_example  array_size_example.cpp
Module12th/Module12Tasks/: README.md  apartment_house  apartment_house.cpp  find_duplicate  find_duplicate.cpp  sorting  sorting.cpp  test_apartment_house.sh  test_assert.sh  test_duplicate.sh  test_sorting.sh  travel_time  travel_time.cpp
Module13th/Module13Hwork/: README.md  test_all.sh
Module13th/Module13Tasks/: test_all.sh
Module14th/Module14Hwork/: README.md  test_all.sh
Module15th/Module15Hwork/: README.md  test_all.sh
Module16th/Module16Hwork/: README.md  test_all.sh
Module17th/Module17Hwork/: README.md  test_all.sh
Module18th/Module18Hwork/: README.md  test_all.sh
Module19th/Module19Hwork/: README.md  test_all.sh
Module20th/Module20Hwork/: README.md  test_all.sh
Module21th/Module21Hwork/: README.md  test_all.sh
Module22th/Module22Hwork/: README.md  test_all.sh
Module23th/Module23Hwork/: README.md  test_all.sh
Module24th/Module24Hwork/: README.md  test_all.sh
Module25th/Module25Hwork/: README.md  test_all.sh
Module26th/Module26Hwork/: README.md  test_all.sh
Module27th/Module27Hwork/: README.md  test_all.sh
Module28th/Module28Hwork/: README.md  test_all.sh
Module29th/Module29Hwork/: README.md  test_all.sh
Module30th/Module30Hwork/: README.md  test_all.sh
Module31th/Module31Hwork/: README.md  test_all.sh
Module32th/Module32Hwork/: README.md  test_all.sh
Module32th/Module32Hwork/Task2_FilmDb/: CMakeLists.txt  test.sh
Module32th/Module32Hwork/Task2_FilmDb/src/: main.cpp
Module33th/Module33Hwork/: README.md  test_all.sh
Module34th/Module34Hwork/: README.md  test_all.sh
Module34th/Module34Hwork/Task1_QtSetup/: CMakeLists.txt  test.sh
Module34th/Module34Hwork/Task1_QtSetup/src/: main.cpp
Module35th/Module35Hwork/: README.md  test_all.sh
Module8th/: knight2  knightmove2.cpp  knightsmove.cpp  tmp.txt
Module8th/Elevator/: a.out  elevator.cpp  elevator.h  main.cpp
Module8th/FinalTasksModule8/ImmolateImproved/: .gitignore  CMakeLists.txt  a.out  main.cpp  main2.txt  tmp.txt  usersinputcontrol.cpp  usersinputcontrol.hpp
Module8th/FinalTasksModule8/ImmolateImproved/unittests/: run_tests  usersinputcontrol_unittests.cpp
Module8th/Pitchcontrol/: a.out  main.cpp  pitchcontrol  pitchcontrol.cpp  pitchcontrol.h
Module8th/knightsmove/: knight  knightsmove.cpp  knightsmove.h  main.cpp  tmp.txt
Module8th/photokiller/: a.out  main.cpp  photokiller.cpp  photokiller.h
Module9th/Module9Tasks/: README.md  author_solution2  author_solution2.cpp  bulls_cows  bulls_cows.cpp  float_validator  float_validator.cpp  roman_numerals  roman_numerals.cpp  string_repeat  string_repeat.cpp  test_bulls_cows.sh  test_float_validator.sh  test_roman_numerals.sh  test_string_repeat.sh  train_time  (+8 more)
(+515 files in other folders)
